{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 737,
  "lineage": "0d67b1a5-2c99-d9af-b4b9-0bcc352bbd86",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "app_to_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-030f921318836e0a3",
            "peer_owner_id": "216989105561",
            "peer_region": "eu-central-1",
            "peer_vpc_id": "vpc-06abd34ded099c49b",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "environment": "develop",
              "product": "cloud",
              "service": "pipeline"
            },
            "tags_all": {
              "environment": "develop",
              "product": "cloud",
              "service": "pipeline"
            },
            "vpc_id": "vpc-0a3a99d7dc3670a4d"
          },
          "dependencies": [
            "module.app_vpc.module.vpc.aws_vpc.this",
            "module.jenkins_vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "pipeline-logs-20250324210744652300000001",
                "enabled": true,
                "prefix": "app-alb"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:216989105561:loadbalancer/app/app-alb/41e26fe7463b5aa4",
            "arn_suffix": "app/app-alb/41e26fe7463b5aa4",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-alb-202440156.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:216989105561:loadbalancer/app/app-alb/41e26fe7463b5aa4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07c52c606dd50afdd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0201e96ba54231489"
              },
              {
                "subnet_id": "subnet-0945d1269749d3f79"
              }
            ],
            "subnets": [
              "subnet-0201e96ba54231489",
              "subnet-0945d1269749d3f79"
            ],
            "tags": {
              "environment": "develop",
              "product": "cloud",
              "service": "pipeline"
            },
            "tags_all": {
              "environment": "develop",
              "product": "cloud",
              "service": "pipeline"
            },
            "vpc_id": "vpc-0a3a99d7dc3670a4d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "module.app_alb.aws_security_group.alb",
            "module.app_vpc.module.vpc.aws_subnet.public",
            "module.app_vpc.module.vpc.aws_vpc.this",
            "module.app_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.s3_logging.aws_s3_bucket.this",
            "module.s3_logging.aws_s3_bucket_acl.this",
            "module.s3_logging.aws_s3_bucket_ownership_controls.this",
            "module.s3_logging.aws_s3_bucket_policy.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:216989105561:listener/app/app-alb/41e26fe7463b5aa4/d10cb7383c446279",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:216989105561:targetgroup/tg-20250324210758238000000005/df62d56ae5a497e4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:216989105561:listener/app/app-alb/41e26fe7463b5aa4/d10cb7383c446279",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:216989105561:loadbalancer/app/app-alb/41e26fe7463b5aa4",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_alb.aws_lb.this",
            "module.app_alb.aws_lb_target_group.this",
            "module.app_alb.aws_security_group.alb",
            "module.app_vpc.module.vpc.aws_subnet.public",
            "module.app_vpc.module.vpc.aws_vpc.this",
            "module.app_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.s3_logging.aws_s3_bucket.this",
            "module.s3_logging.aws_s3_bucket_acl.this",
            "module.s3_logging.aws_s3_bucket_ownership_controls.this",
            "module.s3_logging.aws_s3_bucket_policy.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:216989105561:targetgroup/tg-20250324210758238000000005/df62d56ae5a497e4",
            "arn_suffix": "targetgroup/tg-20250324210758238000000005/df62d56ae5a497e4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:216989105561:targetgroup/tg-20250324210758238000000005/df62d56ae5a497e4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-central-1:216989105561:loadbalancer/app/app-alb/41e26fe7463b5aa4"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-20250324210758238000000005",
            "name_prefix": "tg-",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "app-tg",
              "environment": "develop",
              "product": "cloud",
              "service": "pipeline"
            },
            "tags_all": {
              "Name": "app-tg",
              "environment": "develop",
              "product": "cloud",
              "service": "pipeline"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a3a99d7dc3670a4d"
          },
          "dependencies": [
            "module.app_vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.app_alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:216989105561:security-group/sg-07c52c606dd50afdd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07c52c606dd50afdd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app-alb-sg-20250324210758016800000004",
            "name_prefix": "app-alb-sg-",
            "owner_id": "216989105561",
            "revoke_rules_on_delete": false,
            "tags": {
              "environment": "develop",
              "product": "cloud",
              "service": "pipeline"
            },
            "tags_all": {
              "environment": "develop",
              "product": "cloud",
              "service": "pipeline"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3a99d7dc3670a4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:216989105561:security-group/sg-019b27bb047eec625",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-019b27bb047eec625",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 32768,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07c52c606dd50afdd"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "app-ecs-sg-20250324215805784500000002",
            "name_prefix": "app-ecs-sg-",
            "owner_id": "216989105561",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a3a99d7dc3670a4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_alb.aws_lb.this",
            "module.app_alb.aws_lb_listener.http",
            "module.app_alb.aws_lb_target_group.this",
            "module.app_alb.aws_security_group.alb",
            "module.app_vpc.module.vpc.aws_subnet.public",
            "module.app_vpc.module.vpc.aws_vpc.this",
            "module.app_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.s3_logging.aws_s3_bucket.this",
            "module.s3_logging.aws_s3_bucket_acl.this",
            "module.s3_logging.aws_s3_bucket_ownership_controls.this",
            "module.s3_logging.aws_s3_bucket_policy.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:216989105561:network-acl/acl-01bd35429c943db2e",
            "default_network_acl_id": "acl-01bd35429c943db2e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-01bd35429c943db2e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "216989105561",
            "subnet_ids": [
              "subnet-0201e96ba54231489",
              "subnet-0945d1269749d3f79",
              "subnet-0d473566cae17d47b",
              "subnet-0d6a9d58fc3514f09"
            ],
            "tags": {
              "Name": "app-vpc-default"
            },
            "tags_all": {
              "Name": "app-vpc-default"
            },
            "vpc_id": "vpc-0a3a99d7dc3670a4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:216989105561:route-table/rtb-038fc1e5914a24da4",
            "default_route_table_id": "rtb-038fc1e5914a24da4",
            "id": "rtb-038fc1e5914a24da4",
            "owner_id": "216989105561",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "app-vpc-default"
            },
            "tags_all": {
              "Name": "app-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0a3a99d7dc3670a4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:216989105561:security-group/sg-02708906f219d7823",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-02708906f219d7823",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "216989105561",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-vpc-default"
            },
            "tags_all": {
              "Name": "app-vpc-default"
            },
            "vpc_id": "vpc-0a3a99d7dc3670a4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08a5d0e82bdd538eb",
            "arn": "arn:aws:ec2:eu-central-1:216989105561:elastic-ip/eipalloc-08a5d0e82bdd538eb",
            "association_id": "eipassoc-05e9f2b81bf52d89a",
            "domain": "vpc",
            "id": "eipalloc-08a5d0e82bdd538eb",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-00006884f0fb5fe9a",
            "private_dns": "ip-10-40-3-165.eu-central-1.compute.internal",
            "private_ip": "10.40.3.165",
            "public_dns": "ec2-3-71-135-171.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.71.135.171",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "app-vpc-eu-central-1a"
            },
            "tags_all": {
              "Name": "app-vpc-eu-central-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.app_vpc.module.vpc.aws_internet_gateway.this",
            "module.app_vpc.module.vpc.aws_vpc.this",
            "module.app_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:216989105561:internet-gateway/igw-07f3e0157a3e1bc69",
            "id": "igw-07f3e0157a3e1bc69",
            "owner_id": "216989105561",
            "tags": {
              "Name": "app-vpc"
            },
            "tags_all": {
              "Name": "app-vpc"
            },
            "vpc_id": "vpc-0a3a99d7dc3670a4d"
          },
          "dependencies": [
            "module.app_vpc.module.vpc.aws_vpc.this",
            "module.app_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08a5d0e82bdd538eb",
            "association_id": "eipassoc-05e9f2b81bf52d89a",
            "connectivity_type": "public",
            "id": "nat-0cb8fd8a97ff7efaa",
            "network_interface_id": "eni-00006884f0fb5fe9a",
            "private_ip": "10.40.3.165",
            "public_ip": "3.71.135.171",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0201e96ba54231489",
            "tags": {
              "Name": "app-vpc-eu-central-1a"
            },
            "tags_all": {
              "Name": "app-vpc-eu-central-1a"
            }
          },
          "dependencies": [
            "module.app_vpc.module.vpc.aws_eip.nat",
            "module.app_vpc.module.vpc.aws_internet_gateway.this",
            "module.app_vpc.module.vpc.aws_subnet.public",
            "module.app_vpc.module.vpc.aws_vpc.this",
            "module.app_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outpost_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outpost_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_dns64_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_dns64_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-045305eed26803fe61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0cb8fd8a97ff7efaa",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-045305eed26803fe6",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_vpc.module.vpc.aws_eip.nat",
            "module.app_vpc.module.vpc.aws_internet_gateway.this",
            "module.app_vpc.module.vpc.aws_nat_gateway.this",
            "module.app_vpc.module.vpc.aws_route_table.private",
            "module.app_vpc.module.vpc.aws_subnet.public",
            "module.app_vpc.module.vpc.aws_vpc.this",
            "module.app_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07f3e0157a3e1bc69",
            "id": "r-rtb-0924af8597eac5f8d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0924af8597eac5f8d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_vpc.module.vpc.aws_internet_gateway.this",
            "module.app_vpc.module.vpc.aws_route_table.public",
            "module.app_vpc.module.vpc.aws_vpc.this",
            "module.app_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:216989105561:route-table/rtb-045305eed26803fe6",
            "id": "rtb-045305eed26803fe6",
            "owner_id": "216989105561",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cb8fd8a97ff7efaa",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "app-vpc-private"
            },
            "tags_all": {
              "Name": "app-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3a99d7dc3670a4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_vpc.module.vpc.aws_vpc.this",
            "module.app_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:216989105561:route-table/rtb-0924af8597eac5f8d",
            "id": "rtb-0924af8597eac5f8d",
            "owner_id": "216989105561",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07f3e0157a3e1bc69",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "app-vpc-public"
            },
            "tags_all": {
              "Name": "app-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3a99d7dc3670a4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_vpc.module.vpc.aws_vpc.this",
            "module.app_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04866b83eb90b1e07",
            "route_table_id": "rtb-045305eed26803fe6",
            "subnet_id": "subnet-0d6a9d58fc3514f09"
          },
          "dependencies": [
            "module.app_vpc.module.vpc.aws_route_table.private",
            "module.app_vpc.module.vpc.aws_subnet.private",
            "module.app_vpc.module.vpc.aws_vpc.this",
            "module.app_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d9e4d34b973ac45",
            "route_table_id": "rtb-045305eed26803fe6",
            "subnet_id": "subnet-0d473566cae17d47b"
          },
          "dependencies": [
            "module.app_vpc.module.vpc.aws_route_table.private",
            "module.app_vpc.module.vpc.aws_subnet.private",
            "module.app_vpc.module.vpc.aws_vpc.this",
            "module.app_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f792f0a2e6ab7966",
            "route_table_id": "rtb-0924af8597eac5f8d",
            "subnet_id": "subnet-0201e96ba54231489"
          },
          "dependencies": [
            "module.app_vpc.module.vpc.aws_route_table.public",
            "module.app_vpc.module.vpc.aws_subnet.public",
            "module.app_vpc.module.vpc.aws_vpc.this",
            "module.app_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047d6c6081046e96f",
            "route_table_id": "rtb-0924af8597eac5f8d",
            "subnet_id": "subnet-0945d1269749d3f79"
          },
          "dependencies": [
            "module.app_vpc.module.vpc.aws_route_table.public",
            "module.app_vpc.module.vpc.aws_subnet.public",
            "module.app_vpc.module.vpc.aws_vpc.this",
            "module.app_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:216989105561:subnet/subnet-0d6a9d58fc3514f09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.40.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6a9d58fc3514f09",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "216989105561",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-vpc-private-eu-central-1a"
            },
            "tags_all": {
              "Name": "app-vpc-private-eu-central-1a"
            },
            "vpc_id": "vpc-0a3a99d7dc3670a4d"
          },
          "dependencies": [
            "module.app_vpc.module.vpc.aws_vpc.this",
            "module.app_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:216989105561:subnet/subnet-0d473566cae17d47b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.40.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d473566cae17d47b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "216989105561",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-vpc-private-eu-central-1b"
            },
            "tags_all": {
              "Name": "app-vpc-private-eu-central-1b"
            },
            "vpc_id": "vpc-0a3a99d7dc3670a4d"
          },
          "dependencies": [
            "module.app_vpc.module.vpc.aws_vpc.this",
            "module.app_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:216989105561:subnet/subnet-0201e96ba54231489",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.40.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0201e96ba54231489",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "216989105561",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-vpc-public-eu-central-1a"
            },
            "tags_all": {
              "Name": "app-vpc-public-eu-central-1a"
            },
            "vpc_id": "vpc-0a3a99d7dc3670a4d"
          },
          "dependencies": [
            "module.app_vpc.module.vpc.aws_vpc.this",
            "module.app_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:216989105561:subnet/subnet-0945d1269749d3f79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.40.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0945d1269749d3f79",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "216989105561",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-vpc-public-eu-central-1b"
            },
            "tags_all": {
              "Name": "app-vpc-public-eu-central-1b"
            },
            "vpc_id": "vpc-0a3a99d7dc3670a4d"
          },
          "dependencies": [
            "module.app_vpc.module.vpc.aws_vpc.this",
            "module.app_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.app_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:216989105561:vpc/vpc-0a3a99d7dc3670a4d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.40.0.0/16",
            "default_network_acl_id": "acl-01bd35429c943db2e",
            "default_route_table_id": "rtb-038fc1e5914a24da4",
            "default_security_group_id": "sg-02708906f219d7823",
            "dhcp_options_id": "dopt-036023e7781640b11",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a3a99d7dc3670a4d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-038fc1e5914a24da4",
            "owner_id": "216989105561",
            "tags": {
              "Name": "app-vpc"
            },
            "tags_all": {
              "Name": "app-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.jenkins_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "pipeline-logs-20250324210744652300000001",
                "enabled": true,
                "prefix": "jenkins-alb"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:216989105561:loadbalancer/app/jenkins-alb/0be70495c0354ec8",
            "arn_suffix": "app/jenkins-alb/0be70495c0354ec8",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "jenkins-alb-1234043345.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:216989105561:loadbalancer/app/jenkins-alb/0be70495c0354ec8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "jenkins-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-076d34d8a6619d790"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05eb1c0fe00049479"
              },
              {
                "subnet_id": "subnet-0a3d41cd9de728a57"
              }
            ],
            "subnets": [
              "subnet-05eb1c0fe00049479",
              "subnet-0a3d41cd9de728a57"
            ],
            "tags": {
              "environment": "develop",
              "product": "cloud",
              "service": "pipeline"
            },
            "tags_all": {
              "environment": "develop",
              "product": "cloud",
              "service": "pipeline"
            },
            "vpc_id": "vpc-06abd34ded099c49b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "module.jenkins_alb.aws_security_group.alb",
            "module.jenkins_vpc.module.vpc.aws_subnet.public",
            "module.jenkins_vpc.module.vpc.aws_vpc.this",
            "module.jenkins_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.s3_logging.aws_s3_bucket.this",
            "module.s3_logging.aws_s3_bucket_acl.this",
            "module.s3_logging.aws_s3_bucket_ownership_controls.this",
            "module.s3_logging.aws_s3_bucket_policy.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:216989105561:listener/app/jenkins-alb/0be70495c0354ec8/1689adf5deae6b8b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:216989105561:targetgroup/tg-20250324210800988400000009/250d588c0bcc10d3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:216989105561:listener/app/jenkins-alb/0be70495c0354ec8/1689adf5deae6b8b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:216989105561:loadbalancer/app/jenkins-alb/0be70495c0354ec8",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkins_alb.aws_lb.this",
            "module.jenkins_alb.aws_lb_target_group.this",
            "module.jenkins_alb.aws_security_group.alb",
            "module.jenkins_vpc.module.vpc.aws_subnet.public",
            "module.jenkins_vpc.module.vpc.aws_vpc.this",
            "module.jenkins_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.s3_logging.aws_s3_bucket.this",
            "module.s3_logging.aws_s3_bucket_acl.this",
            "module.s3_logging.aws_s3_bucket_ownership_controls.this",
            "module.s3_logging.aws_s3_bucket_policy.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:216989105561:targetgroup/tg-20250324210800988400000009/250d588c0bcc10d3",
            "arn_suffix": "targetgroup/tg-20250324210800988400000009/250d588c0bcc10d3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/login",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:216989105561:targetgroup/tg-20250324210800988400000009/250d588c0bcc10d3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-central-1:216989105561:loadbalancer/app/jenkins-alb/0be70495c0354ec8"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-20250324210800988400000009",
            "name_prefix": "tg-",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "jenkins-tg",
              "environment": "develop",
              "product": "cloud",
              "service": "pipeline"
            },
            "tags_all": {
              "Name": "jenkins-tg",
              "environment": "develop",
              "product": "cloud",
              "service": "pipeline"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06abd34ded099c49b"
          },
          "dependencies": [
            "module.jenkins_vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.jenkins_alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:216989105561:security-group/sg-076d34d8a6619d790",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-076d34d8a6619d790",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "jenkins-alb-sg-2025032421080104720000000a",
            "name_prefix": "jenkins-alb-sg-",
            "owner_id": "216989105561",
            "revoke_rules_on_delete": false,
            "tags": {
              "environment": "develop",
              "product": "cloud",
              "service": "pipeline"
            },
            "tags_all": {
              "environment": "develop",
              "product": "cloud",
              "service": "pipeline"
            },
            "timeouts": null,
            "vpc_id": "vpc-06abd34ded099c49b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkins_vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:216989105561:security-group/sg-05794569f30acab96",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05794569f30acab96",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 32768,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-076d34d8a6619d790"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "jenkins-ecs-sg-20250324215805180300000001",
            "name_prefix": "jenkins-ecs-sg-",
            "owner_id": "216989105561",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06abd34ded099c49b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkins_alb.aws_lb.this",
            "module.jenkins_alb.aws_lb_listener.http",
            "module.jenkins_alb.aws_lb_target_group.this",
            "module.jenkins_alb.aws_security_group.alb",
            "module.jenkins_vpc.module.vpc.aws_subnet.public",
            "module.jenkins_vpc.module.vpc.aws_vpc.this",
            "module.jenkins_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.s3_logging.aws_s3_bucket.this",
            "module.s3_logging.aws_s3_bucket_acl.this",
            "module.s3_logging.aws_s3_bucket_ownership_controls.this",
            "module.s3_logging.aws_s3_bucket_policy.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:216989105561:network-acl/acl-07993a0b1b6889bb8",
            "default_network_acl_id": "acl-07993a0b1b6889bb8",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-07993a0b1b6889bb8",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "216989105561",
            "subnet_ids": [
              "subnet-01156e2a4432f0b7b",
              "subnet-045baa8b7859ccc8c",
              "subnet-05eb1c0fe00049479",
              "subnet-0a3d41cd9de728a57"
            ],
            "tags": {
              "Name": "jenkins-vpc-default"
            },
            "tags_all": {
              "Name": "jenkins-vpc-default"
            },
            "vpc_id": "vpc-06abd34ded099c49b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkins_vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:216989105561:route-table/rtb-02c8890f127b08aab",
            "default_route_table_id": "rtb-02c8890f127b08aab",
            "id": "rtb-02c8890f127b08aab",
            "owner_id": "216989105561",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "jenkins-vpc-default"
            },
            "tags_all": {
              "Name": "jenkins-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-06abd34ded099c49b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkins_vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:216989105561:security-group/sg-0c04b4fab7f1d9383",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0c04b4fab7f1d9383",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "216989105561",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins-vpc-default"
            },
            "tags_all": {
              "Name": "jenkins-vpc-default"
            },
            "vpc_id": "vpc-06abd34ded099c49b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkins_vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02a16cfd3af113821",
            "arn": "arn:aws:ec2:eu-central-1:216989105561:elastic-ip/eipalloc-02a16cfd3af113821",
            "association_id": "eipassoc-0f7d7479aed320edb",
            "domain": "vpc",
            "id": "eipalloc-02a16cfd3af113821",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0074dbada8f3bd53c",
            "private_dns": "ip-10-41-3-46.eu-central-1.compute.internal",
            "private_ip": "10.41.3.46",
            "public_dns": "ec2-18-184-51-202.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.184.51.202",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "jenkins-vpc-eu-central-1a"
            },
            "tags_all": {
              "Name": "jenkins-vpc-eu-central-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.jenkins_vpc.module.vpc.aws_internet_gateway.this",
            "module.jenkins_vpc.module.vpc.aws_vpc.this",
            "module.jenkins_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:216989105561:internet-gateway/igw-0471881ad8adb9ca4",
            "id": "igw-0471881ad8adb9ca4",
            "owner_id": "216989105561",
            "tags": {
              "Name": "jenkins-vpc"
            },
            "tags_all": {
              "Name": "jenkins-vpc"
            },
            "vpc_id": "vpc-06abd34ded099c49b"
          },
          "dependencies": [
            "module.jenkins_vpc.module.vpc.aws_vpc.this",
            "module.jenkins_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02a16cfd3af113821",
            "association_id": "eipassoc-0f7d7479aed320edb",
            "connectivity_type": "public",
            "id": "nat-0365f183d22779d2a",
            "network_interface_id": "eni-0074dbada8f3bd53c",
            "private_ip": "10.41.3.46",
            "public_ip": "18.184.51.202",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a3d41cd9de728a57",
            "tags": {
              "Name": "jenkins-vpc-eu-central-1a"
            },
            "tags_all": {
              "Name": "jenkins-vpc-eu-central-1a"
            }
          },
          "dependencies": [
            "module.jenkins_vpc.module.vpc.aws_eip.nat",
            "module.jenkins_vpc.module.vpc.aws_internet_gateway.this",
            "module.jenkins_vpc.module.vpc.aws_subnet.public",
            "module.jenkins_vpc.module.vpc.aws_vpc.this",
            "module.jenkins_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outpost_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outpost_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_dns64_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_dns64_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-030280967213d2b521080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0365f183d22779d2a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-030280967213d2b52",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkins_vpc.module.vpc.aws_eip.nat",
            "module.jenkins_vpc.module.vpc.aws_internet_gateway.this",
            "module.jenkins_vpc.module.vpc.aws_nat_gateway.this",
            "module.jenkins_vpc.module.vpc.aws_route_table.private",
            "module.jenkins_vpc.module.vpc.aws_subnet.public",
            "module.jenkins_vpc.module.vpc.aws_vpc.this",
            "module.jenkins_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0471881ad8adb9ca4",
            "id": "r-rtb-002e53748542bea311080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-002e53748542bea31",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkins_vpc.module.vpc.aws_internet_gateway.this",
            "module.jenkins_vpc.module.vpc.aws_route_table.public",
            "module.jenkins_vpc.module.vpc.aws_vpc.this",
            "module.jenkins_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:216989105561:route-table/rtb-030280967213d2b52",
            "id": "rtb-030280967213d2b52",
            "owner_id": "216989105561",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0365f183d22779d2a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jenkins-vpc-private"
            },
            "tags_all": {
              "Name": "jenkins-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-06abd34ded099c49b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkins_vpc.module.vpc.aws_vpc.this",
            "module.jenkins_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:216989105561:route-table/rtb-002e53748542bea31",
            "id": "rtb-002e53748542bea31",
            "owner_id": "216989105561",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0471881ad8adb9ca4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jenkins-vpc-public"
            },
            "tags_all": {
              "Name": "jenkins-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-06abd34ded099c49b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkins_vpc.module.vpc.aws_vpc.this",
            "module.jenkins_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01bcb4e7ed904a2d8",
            "route_table_id": "rtb-030280967213d2b52",
            "subnet_id": "subnet-045baa8b7859ccc8c"
          },
          "dependencies": [
            "module.jenkins_vpc.module.vpc.aws_route_table.private",
            "module.jenkins_vpc.module.vpc.aws_subnet.private",
            "module.jenkins_vpc.module.vpc.aws_vpc.this",
            "module.jenkins_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098d4fbc437f2d716",
            "route_table_id": "rtb-030280967213d2b52",
            "subnet_id": "subnet-01156e2a4432f0b7b"
          },
          "dependencies": [
            "module.jenkins_vpc.module.vpc.aws_route_table.private",
            "module.jenkins_vpc.module.vpc.aws_subnet.private",
            "module.jenkins_vpc.module.vpc.aws_vpc.this",
            "module.jenkins_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091e35417368dd77f",
            "route_table_id": "rtb-002e53748542bea31",
            "subnet_id": "subnet-0a3d41cd9de728a57"
          },
          "dependencies": [
            "module.jenkins_vpc.module.vpc.aws_route_table.public",
            "module.jenkins_vpc.module.vpc.aws_subnet.public",
            "module.jenkins_vpc.module.vpc.aws_vpc.this",
            "module.jenkins_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0a8e859b7ad2937",
            "route_table_id": "rtb-002e53748542bea31",
            "subnet_id": "subnet-05eb1c0fe00049479"
          },
          "dependencies": [
            "module.jenkins_vpc.module.vpc.aws_route_table.public",
            "module.jenkins_vpc.module.vpc.aws_subnet.public",
            "module.jenkins_vpc.module.vpc.aws_vpc.this",
            "module.jenkins_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:216989105561:subnet/subnet-045baa8b7859ccc8c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.41.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045baa8b7859ccc8c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "216989105561",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jenkins-vpc-private-eu-central-1a"
            },
            "tags_all": {
              "Name": "jenkins-vpc-private-eu-central-1a"
            },
            "vpc_id": "vpc-06abd34ded099c49b"
          },
          "dependencies": [
            "module.jenkins_vpc.module.vpc.aws_vpc.this",
            "module.jenkins_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:216989105561:subnet/subnet-01156e2a4432f0b7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.41.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01156e2a4432f0b7b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "216989105561",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jenkins-vpc-private-eu-central-1b"
            },
            "tags_all": {
              "Name": "jenkins-vpc-private-eu-central-1b"
            },
            "vpc_id": "vpc-06abd34ded099c49b"
          },
          "dependencies": [
            "module.jenkins_vpc.module.vpc.aws_vpc.this",
            "module.jenkins_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:216989105561:subnet/subnet-0a3d41cd9de728a57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.41.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a3d41cd9de728a57",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "216989105561",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jenkins-vpc-public-eu-central-1a"
            },
            "tags_all": {
              "Name": "jenkins-vpc-public-eu-central-1a"
            },
            "vpc_id": "vpc-06abd34ded099c49b"
          },
          "dependencies": [
            "module.jenkins_vpc.module.vpc.aws_vpc.this",
            "module.jenkins_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:216989105561:subnet/subnet-05eb1c0fe00049479",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.41.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05eb1c0fe00049479",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "216989105561",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jenkins-vpc-public-eu-central-1b"
            },
            "tags_all": {
              "Name": "jenkins-vpc-public-eu-central-1b"
            },
            "vpc_id": "vpc-06abd34ded099c49b"
          },
          "dependencies": [
            "module.jenkins_vpc.module.vpc.aws_vpc.this",
            "module.jenkins_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.jenkins_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:216989105561:vpc/vpc-06abd34ded099c49b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.41.0.0/16",
            "default_network_acl_id": "acl-07993a0b1b6889bb8",
            "default_route_table_id": "rtb-02c8890f127b08aab",
            "default_security_group_id": "sg-0c04b4fab7f1d9383",
            "dhcp_options_id": "dopt-036023e7781640b11",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06abd34ded099c49b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02c8890f127b08aab",
            "owner_id": "216989105561",
            "tags": {
              "Name": "jenkins-vpc"
            },
            "tags_all": {
              "Name": "jenkins-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}